<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/order_sms_guide_v50"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.5"
        android:orientation="vertical"/>

    <TextView
        android:id="@+id/order_sms_dialog_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/order_sms_guide_v50"
        app:layout_constraintEnd_toEndOf="@id/order_sms_guide_v50"
        app:layout_constraintTop_toTopOf="parent"
        android:gravity="center"
        android:textSize="45dp"
        android:text="@string/order_sms_dialog_header"
        android:layout_marginTop="30dp"/>

    <Button
        android:id="@+id/order_sms_button_no"
        android:layout_width="200dp"
        android:layout_height="100dp"
        app:layout_constraintTop_toBottomOf="@id/order_sms_dialog_header"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/order_sms_dialog_header"
        app:layout_constraintEnd_toStartOf="@id/order_sms_guide_v50"
        android:layout_marginTop="30dp"
        android:background="@color/colorFocusRed"
        android:text="@string/no"
        android:textStyle="bold"
        android:textSize="30dp"
        android:textColor="@color/white"/>

    <Button
        android:id="@+id/order_sms_button_yes"
        android:layout_width="200dp"
        android:layout_height="100dp"
        app:layout_constraintTop_toBottomOf="@id/order_sms_dialog_header"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/order_sms_guide_v50"
        app:layout_constraintEnd_toEndOf="@id/order_sms_dialog_header"
        android:layout_marginTop="30dp"
        android:background="@color/colorFocusLinkSuccess"
        android:text="@string/yes"
        android:textStyle="bold"
        android:textSize="30dp"

        android:textColor="@color/white"/>

    <TextView
        android:id="@+id/order_sms_disclaimer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        app:layout_constraintStart_toStartOf="@id/order_sms_guide_v50"
        app:layout_constraintEnd_toEndOf="@id/order_sms_guide_v50"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textSize="20dp"
        android:text="@string/order_sms_disclaimer"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/order_sms_button_yes"
        android:src="@color/white"/>





</androidx.constraintlayout.widget.ConstraintLayout>