<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/activity_item_control_parent_layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorFocusBlack"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/item_control_header_guide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.08"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/item_control_guide_v7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.7"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/item_control_guide_v100"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="1.0"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/item_control_layout_header"
        android:layout_width="0dp"
        android:layout_height="60dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/colorFocusBlue"
        >

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/item_control_guide_header_V80"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.80"/>

        <View
            android:id="@+id/item_control_header"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@color/colorFocusBlue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/item_control_menu_item_search_field"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="5dp"
            android:hint="@string/item_control_search_field"
            android:textStyle="bold"
            android:singleLine="true"
            android:textColor="@color/colorBlack"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/item_control_button_back"
            app:layout_constraintEnd_toEndOf="@id/item_control_guide_header_V80"
            />

        <Spinner
            android:id="@+id/item_control_item_search_search_spinner_report_group"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            app:layout_constraintStart_toEndOf="@id/item_control_guide_header_V80"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />

        <Button
            android:id="@+id/item_control_button_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginLeft="10dp"
            android:width="30dp"
            android:text="@string/item_control_back"
            android:background="@color/colorFocusOrange"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/item_control_recycler_with_header"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/item_control_layout_header"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="@id/item_control_guide_v100"

        >
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/item_control_item_guide_v40"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintGuide_percent=".4"
            android:orientation="vertical"/>
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/item_control_item_guide_v75"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintGuide_percent=".75"
            android:orientation="vertical"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/item_control_item_guide_v95"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintGuide_percent=".95"
            android:orientation="vertical"/>

        <TextView
            android:id="@+id/item_control_item_text_item_name"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:textSize="20dp"
            android:textStyle="bold"
            android:text="@string/item_control_header_item_name"

            android:textColor="@color/colorFocusLinkBlue"
            android:gravity="center"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="@id/item_control_item_guide_v40"
            />
        <TextView
            android:id="@+id/item_control_count_on_hand_header"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:textSize="20dp"
            android:textStyle="bold"
            android:gravity="center"
            app:layout_constraintStart_toStartOf="@id/item_control_item_guide_v40"
            app:layout_constraintEnd_toEndOf="@id/item_control_item_guide_v75"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@color/white"
            android:text="@string/item_control_header_item_count"
            android:textColor="@color/colorFocusLinkBlue"/>

        <TextView
            android:id="@+id/item_control_out_of_stock_header"
            android:layout_width="0dp"
            android:layout_height="50dp"
            app:layout_constraintTop_toTopOf="parent"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/item_control_item_guide_v75"
            android:background="@color/white"
            android:text="@string/item_control_header_item_stock_status"
            android:textColor="@color/colorFocusLinkBlue"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="20dp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/item_control_recycler_item_list"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/item_control_item_text_item_name"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@color/white"
            >

        </androidx.recyclerview.widget.RecyclerView>

    </androidx.constraintlayout.widget.ConstraintLayout>
    <TextView
        android:id="@+id/item_control_header_no_items_found"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/item_control_layout_header"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="gone"
        android:layout_margin="100dp"
        android:textSize="60dp"
        android:textColor="@color/white"
        android:text="@string/item_control_header_no_items_found"/>

    <include
        android:id="@+id/item_control_item_edit_view"
        layout="@layout/activity_item_edit"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/item_control_recycler_with_header"
        app:layout_constraintEnd_toEndOf="parent"/>
    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />













</androidx.constraintlayout.widget.ConstraintLayout>